hphp/test/zend/good/ext/gd/tests/jpeg2wbmp_error1.php.skipif
<?php
if (!gd_info()['JPEG Support']) echo 'skip';
if (!gd_info()['WBMP Support']) echo 'skip';
