hphp/test/zend/bad/ext/curl/tests/bug65646_open_basedir_new.php.skipif
<?php
if (!extension_loaded('curl')) exit("skip curl extension not loaded");
if (version_compare(curl_version()['version'], '7.19.4', '<')) exit("skip curl version is too old");
?>